feat(exam api):finish exam upload delete api
