# backend/models/examModel.js
@@ -1,3 +1,4 @@
+const e = require("express");
 const poolConnection = require("../utils/dbConnection");
 
 exports.getExamList = async (classId, paging) => {
@@ -15,7 +16,7 @@ exports.getExamList = async (classId, paging) => {
     query += " AND class_id = ?";
     queryParams.push(classId);
   }
-  query += " ORDER BY id DESC LIMIT ? OFFSET ?";
+  query += " ORDER BY year DESC LIMIT ? OFFSET ?";
   queryParams.push(pageSize);
   queryParams.push(offset);
   try {
@@ -73,3 +74,49 @@ exports.uploadExam = async (exam, connection) => {
     connection.release();
   }
 };
+
+exports.updateExam = async (examId, exam, connection) => {
+  const query = `
+    UPDATE exams
+    SET type = ?, teacher = ?, year = ?, main_file = ?, ans_file = ?, sheet_files = ?, has_ans = ?
+    WHERE id = ?
+    `;
+  const queryParams = [
+    exam.type,
+    exam.teacher,
+    exam.year,
+    exam.main_file,
+    exam.ans_file,
+    exam.sheet_files,
+    exam.has_ans === 'true' ? 1 : 0,
+    examId,
+  ];
+  try {
+    const result = await connection.query(query, queryParams);
+    return result[0].affectedRows;
+  } catch (err) {
+    console.error(err);
+    return null;
+  } finally {
+    connection.release();
+  }
+}
+
+exports.deleteExam = async (examId) => {
+  const connection = await poolConnection();
+  const query = `
+    UPDATE exams
+    SET deleted_at = NOW()
+    WHERE id = ?
+    `;
+  const queryParams = [examId];
+  try {
+    const result = await connection.query(query, queryParams);
+    return result[0].affectedRows;
+  } catch (err) {
+    console.error(err);
+    return null;
+  } finally {
+    connection.release();
+  }
+}
